libs/core/proc_macros/selectable_fields/tests/ui/enum_not_supported.rs
use core_proc_macros::SelectableFields;

#[derive(SelectableFields)]
pub enum Status {  // Should panic - only structs supported
    Active,
    Inactive,
}

fn main() {}
